# cas_data_science

./: .gitignore  pyproject.toml
0_Notes/: 02_SQL_Notes.md  03_LinAlg_Notes.md  04_Statistik_Notes.md  05_Data_Wrangling.md  06_Information_Visualisation.md  07_Data_Mining.md  08_Regression.md  09_ML_Spickzettel.tex  09_Machine_Learning.md  10_ML_OPS.md  12_NLP.md  12_NLP_Spickzettel.tex  13_Recommender_Systems.md  15_Zeitreihen_Spickzettel.tex  15_Zeitreihenanalyse.md  99_Projekt.md  Ex_ML.tex  Ex_ML_2.tex  Ex_ML_Ops.tex  Ex_NLP.tex  Ex_Zeitreihen.tex
data_wrangling/exercises/: Exercise 1.ipynb  Exercise 2.ipynb  Exercise 3.ipynb  Exercise 4.ipynb  building3d.dae  exercise 5.ipynb  requirements.txt
try_outs/: 02_lineare_algebra_course.py  02_lineare_algebra_prepare.py  04_statistik.py
